2008-02-21  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Willie Walker <william.walker@sun.com>

	* gnome-at-commandline.in.in: use `...` syntax instead of $(...) for
	better portability (bug #517938)

2008-02-09  Jens Granseuer  <jensgr@gmx.net>

	* gnome-default-applications.xml.in: add support for Konsole, too
	(bug #515386)

2008-02-09  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Nicolas Valcárcel

	* gnome-default-applications.xml.in: add support for Terminator
	console (bug #515366)

2008-02-08  Jens Granseuer  <jensgr@gmx.net>

	* gnome-at-session.desktop.in.in: improve name and description for the
	visual AT autostarter (bug #515197)

2008-02-01  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Sven Arvidsson <sa@whiz.se>

	* gnome-default-applications.xml.in: support --new-tab/--new-window
	for Iceweasel (bug #322795)

2007-12-06  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Chris Jones

	* gnome-default-applications.xml.in: sok is now called onBoard (bug
	#499328)

2007-11-28  Jens Granseuer  <jensgr@gmx.net>

	Based on patch by: Jakub Rusinek <liviopl.pl@gmail.com>

	* gnome-default-applications.xml.in: add support for Midori web browser
	(bug #500274)

2007-11-26  Sebastien Bacher  <seb128@ubuntu.com>

	* gnome-default-applications.xml.in: don't list the oudated evolution
	  versions nor the text web browsers (Closes: #499327)

2007-10-31  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Distcheck fixes.

2007-10-25  Jens Granseuer  <jensgr@gmx.net>

	* gnome-default-applications.xml.in: replace obsolete "orca -m" command
	by new "orca -e magnifier" (bug #489973)

2007-10-02  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Stephane Loeuillet <leroutier@gmail.com>

	* Makefile.am: use standard xdg autostart directory instead of gnome
	one (bug #481740)

2007-09-19  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Michael Monreal <infernux@web.de>

	* gnome-da-capplet.c: replace mail and multimedia icon names with
	Tangoified versions (bug #470386)
