@@ -76,7 +76,7 @@
 	  <property name="enable_popup">False</property>
 
 	  <child>
-	    <widget class="GtkVBox" id="internet_apps_vbox">
+	    <widget class="GtkVBox" id="internet_vbox">
 	      <property name="border_width">12</property>
 	      <property name="visible">True</property>
 	      <property name="homogeneous">False</property>
@@ -1314,7 +1314,7 @@
 	  </child>
 
 	  <child>
-	    <widget class="GtkVBox" id="system_apps_vbox">
+	    <widget class="GtkVBox" id="system_vbox">
 	      <property name="border_width">12</property>
 	      <property name="visible">True</property>
 	      <property name="homogeneous">False</property>
@@ -1740,7 +1740,7 @@
 	  </child>
 
 	  <child>
-	    <widget class="GtkVBox" id="a11y_apps_vbox">
+	    <widget class="GtkVBox" id="a11y_vbox">
 	      <property name="border_width">12</property>
 	      <property name="visible">True</property>
 	      <property name="homogeneous">False</property>
