@@ -1,3 +1,9 @@
+2008-04-16  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-da-capplet.c: (show_dialog), (main):
+	* gnome-default-applications-properties.glade: add -p/--show-page to
+	open the dialog on a specific page (see bug #528196)
+
 2008-02-21  Jens Granseuer  <jensgr@gmx.net>
 
 	Patch by: Willie Walker <william.walker@sun.com>
